IC-Prod/objects/Internal_IS_Change_Request__c.object
<CustomObject>
    <description>Internal IS Change Request to bypass Champion Approval for requests suggested by the IS Team that does not need Regional Champion Approval.  Approval will come from the Business Lead (Brian Feldtman) and the IS Approver (Jennifer Steinman).</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <description>Actual Date that Internal IS Change Request was completed and deployed.</description>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Business_Lead__c</fullName>
        <description>Business Lead approves, rejects or requests more information from the IS Dept.</description>
        <label>Approval Business Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <description>Comments from either the Business Lead (Brian Feldtman) or the IS Approver (Bonnie Briant) regarding the Change Request.</description>
        <label>Approver Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Person or group to which the case is assigned.</description>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Brian Feldtman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eli Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eva Delorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hugh Compton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maria Fitzsimons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shashank Makhija</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila McEvoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signe Einess</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Measure__c</fullName>
        <description>BENEFIT MEASUREMENT: Define how we will measure the benefit of the solution.</description>
        <label>Benefit Measure</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_of_Proposed_Solution__c</fullName>
        <description>BENEFITS OF PROPOSED SOLUTION: Clearly and concisely list benefits statements for your proposed solution. Include productivity gains where applicable, as well as potential for increased revenue. Reference the tangible (hard dollar) and intangible (soft dollar) savings, and where possible, reference the business drivers associated with these statements.</description>
        <label>Benefit of Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <label>Business Drivers</label>
        <picklist>
            <picklistValues>
                <fullName>Optimization of Internal Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Growth or Margin Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Describe in Text Field)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Opportunity_or_Problem__c</fullName>
        <description>Clearly and concisely describe the business opportunity at hand or the business problem you are trying to solve. Depending on complexity, you may choose to organize your statement into paragraphs labeled: Background, Current Process Overview, Problems Identified, and/or Opportunity.</description>
        <label>Business Opportunity or Problem</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_in_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if it&apos;s complete in Sandbox and ready for review, but not done in Production yet.</inlineHelpText>
        <label>Complete in Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>Estimated date of completion of the Internal IS Change Request.</description>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Date__c</fullName>
        <description>Date of Final Approval from Business Lead (Brian Feldtman).</description>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IS_Approver__c</fullName>
        <description>IS Approver (Bonnie Briant) can accept, reject or request more information for the Change Request.</description>
        <label>IS Approver</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs More Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IS_Cost_Estimate__c</fullName>
        <description>Estimated cost to complete the Internal IS Change Request.</description>
        <label>IS Cost Estimate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <description>Used for miscellaneous description.</description>
        <label>Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <description>PROPOSED SOLUTION: Clearly and concisely, describe the solution you are proposing to address the business opportunity at hand or the business problem. Specify proposed changes to business processes and, if required, to technology application systems or infrastructure. INCLUDE AN EXPLANATION OF THE IMPACT OF DOING NOTHING.</description>
        <label>Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedy_CRQ__c</fullName>
        <inlineHelpText>Numeric portion of the Remedy  Change Request  (&quot;CRQ&quot;) number corresponding to this change.  All changes must be entered as CRQ tickets in Remedy before closing in SFDC.</inlineHelpText>
        <label>Remedy CRQ #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of Internal IS Change Request.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IS Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Learning Services Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending 3rd Party - Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Worklog__c</fullName>
        <description>Description of work during the process.  Please ID and Date Stamp each entry.</description>
        <label>Worklog</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Internal IS Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_Approval_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>Other_Description__c</columns>
        <columns>Proposed_Solution__c</columns>
        <columns>Remedy_CRQ__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Completion_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Completed Last Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Last_Month_by_Sheila</fullName>
        <columns>NAME</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>Other_Description__c</columns>
        <columns>Proposed_Solution__c</columns>
        <columns>Remedy_CRQ__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Completion_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Sheila McEvoy</value>
        </filters>
        <label>Completed Last Month by Sheila</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBASSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>Other_Description__c</columns>
        <columns>Proposed_Solution__c</columns>
        <columns>Remedy_CRQ__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Completion_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Completed This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ICR_s_Completed_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Proposed_Solution__c</columns>
        <columns>Benefit_of_Proposed_Solution__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>Other_Description__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Completion_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>ICR&apos;s Completed Last Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IntegrationAll</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>integration</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>integration</value>
        </filters>
        <label>Integration - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IntegrationOpen</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>integration</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>integration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Completed</value>
        </filters>
        <label>Integration - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OnHold</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>On Hold</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OpenandApproved</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Complete_in_Sandbox__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,On Hold</value>
        </filters>
        <label>Open and Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OtherNonIntegrationOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Actual_Completion_Date__c</columns>
        <columns>Final_Approval_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>integration</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notContain</operation>
            <value>integration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Completed</value>
        </filters>
        <label>Other (Non-Integration) - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WaitingforApproval</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled,Completed</value>
        </filters>
        <filters>
            <field>Final_Approval_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Waiting for Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Internal IS Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal IS Change Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Completed_Requires_CHG</fullName>
        <active>true</active>
        <description>All completed ICRs require a Remedy CHG # to be entered.</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;),  TRIM(Remedy_CRQ__c)  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Remedy_CRQ__c</errorDisplayField>
        <errorMessage>A Remedy CHG # is required on all Completed changes.  If you have not already created the Remedy CHG ticket for this change, please do so, then come back and enter the CHG number here.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Requires_Date</fullName>
        <active>true</active>
        <description>Need to enter Actual Completion Date, if completed</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;),   TEXT(Actual_Completion_Date__c)  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Actual_Completion_Date__c</errorDisplayField>
        <errorMessage>Actual Completion Date is required if you are Completing a ticket.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Assigned_To</fullName>
        <active>true</active>
        <description>Require an assignee if the status is &apos;Assigned&apos; or &apos; In Development&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(Assigned_To__c, &quot;&quot;), OR(ISPICKVAL(Status__c , &quot;Assigned&quot;),ISPICKVAL(Status__c , &quot;In Development&quot;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Change Request must be assigned if status is &apos;Assigned&apos; or &apos;In Development&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Final_Approval_Date</fullName>
        <active>true</active>
        <description>We can&apos;t let CRs slip by w/o saying when they were approved</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(Assigned_To__c,  &quot;&quot;)), TEXT( Final_Approval_Date__c) = &quot;&quot;,NOT(ISPICKVAL( Status__c ,  &quot;Cancelled&quot;)),NOT(ISPICKVAL( Status__c ,  &quot;Open&quot;)))</errorConditionFormula>
        <errorDisplayField>Final_Approval_Date__c</errorDisplayField>
        <errorMessage>Enter Final Approval Date!</errorMessage>
    </validationRules>
</CustomObject>